--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -646,11 +646,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "import unittest\n",
     "#si-matrix\n",
     "\n",
     "\"\"\" \n",
@@ -665,72 +667,72 @@
     "\n",
     "\"\"\"\n",
     "\n",
+    "\n",
+    "\n",
     "class Matrix(object):\n",
     "    \"\"\" \n",
     "    Read the matrix and store as part of the class object\n",
     "    \"\"\"\n",
-    "    def __init__(self, value = {}, dim=(1,1)):\n",
-    "        if isinstance(value, list):\n",
+    "    def __init__(self, value=None, dim=(1,1)):\n",
+    "        if value is None:\n",
+    "                self.value = [[1]*dim[1] for i in range(dim[0])]\n",
+    "                self.shape = dim\n",
+    "        elif isinstance(value, list):\n",
     "            if len(value)>0:\n",
-    "                if type(value[0]) is int or type(value[0]) is float:\n",
-    "                    row = (int, float)\n",
-    "                else:\n",
-    "                    row = type(value[0])\n",
-    "                for i in value:\n",
-    "                    if type(i) is not int, type(i) is not float, type(i) is not list:\n",
-    "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
-    "                if row is list:\n",
+    "                if isinstance(value[0], (int, float)):\n",
+    "                    for i in value:\n",
+    "                        if not isinstance(i, (int, float)):\n",
+    "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
+    "                    self.value = value\n",
+    "                    self.shape = (len(value), 1)\n",
+    "                elif isinstance(value[0], list):\n",
     "                    lenInner = len(value[0])\n",
     "                    for i in value:\n",
-    "                        if len(i) is not lenInner:\n",
+    "                        if len(i) != lenInner:\n",
     "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
     "                        for j in i:\n",
-    "                            if type(j) is not int and type(j) is not float:\n",
+    "                            if not isinstance(j, (int, float)):\n",
     "                                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
-    "                self.value = value\n",
-    "                try:\n",
+    "                    self.value = value\n",
     "                    self.shape = (len(value), len(value[0]))\n",
-    "                except:\n",
-    "                    self.shape = (len(value), 1)\n",
-    "            if:\n",
-    "                matrix = []\n",
-    "                for i in range(dim[0]):\n",
-    "                        row = []\n",
-    "                        for j in range(dim[1]):\n",
-    "                            row.append(1)\n",
-    "                        matrix.append(row)\n",
+    "                else: \n",
+    "                    raise RuntimeError(\"Matrix is invalid. First element must be numeric or list.\")\n",
+    "            else:\n",
+    "                self.value = [[1]*dim[1] for i in range(dim[0])]\n",
+    "                self.shape = dim\n",
+    "                \n",
     "                                \n",
-    "                value = matrix\n",
-    "                shape = dim\n",
-    "    \n",
     "    \"\"\"\n",
     "    Print the matrix to screen\n",
     "    \"\"\"           \n",
-    "    def __repr__(self)\n",
+    "    def __repr__(self):\n",
     "        string = \"  \"\n",
-    "        for i in range(shape[0]):\n",
-    "            if shape[1]>1:\n",
-    "                if i < shape[0]-1:\n",
-    "                    string += \"[ \"\n",
-    "                    for j in range(shape[1]):\n",
-    "                        string += str(value[i][j]) + \" \"\n",
-    "                    string += \"]\\n  \"\n",
+    "        \n",
+    "        if self.shape[1] > 1:\n",
+    "            for i in range(self.shape[0]):\n",
+    "                string += \"[ \"\n",
+    "                for j in range(self.shape[1]):\n",
+    "                    string += str(self.value[i][j]) + \" \"\n",
+    "                string += \"]\"\n",
+    "                if i < self.shape[0] - 1:\n",
+    "                    string += \"\\n  \"\n",
     "                else:\n",
-    "                    string += \"[ \"\n",
-    "                    for j in range(shape[1]):\n",
-    "                        string += str(value[i][j]) + \" \"\n",
+    "                    string += \"\\n\\n\"\n",
+    "                    \n",
+    "        else:  \n",
+    "            if self.shape[0] == 1:\n",
+    "                string += \"[ \" + str(self.value[0]) + \" ]\"\n",
     "            else:\n",
-    "                if shape[0]==1:\n",
-    "                    string += \"[ \"\n",
-    "                if i < shape[0]-1:\n",
-    "                    if shape[1]>1:\n",
-    "                        string += \"[ \"\n",
-    "                    string += str(value[i]) + \"\\n  \"\n",
-    "                else:\n",
-    "                    string += str(value[i]) + \" \"\n",
-    "        if shape[1]>1:\n",
-    "            string += \"]\\n\\n\"\n",
-    "        return string"
+    "                for i in range(self.shape[0]):\n",
+    "                    if i == 0:\n",
+    "                        string += \"[ \" + str(self.value[i]) + \"\\n  \"\n",
+    "                    elif i < self.shape[0] - 1:\n",
+    "                        string += str(self.value[i]) + \"\\n  \"\n",
+    "                    else:\n",
+    "                        string += str(self.value[i]) + \" ]\"\n",
+    "                        \n",
+    "        return string\n",
+    "\n"
    ]
   }
  ],
@@ -741,16 +743,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "name": "python"
   }
  },
  "nbformat": 4,
